<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:text="@string/choose_level_title"
            android:textColor="@color/black__my"
            android:textSize="32sp" />


        <Button
            android:id="@+id/button_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/test_level"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_level_ease"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/green_my"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/easy_level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_level_normal"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/orange_my"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/normal_level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_level_hard"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/hard_level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="35dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>